Start add Tickets View

--- a/NetEvent/Client/Pages/Administration/Events/Event.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Event.razor
@@ -28,5 +28,8 @@
     </div>
 
     <EventSettings Event="@_Event" Venues="@_Venues" />
-    <TicketTypes Event="@_Event" />
+    @if(_Event.Id > 0)
+    {
+        <TicketTypes Event="@_Event" />
+    }
 }
