--- a/NetEvent/Client/Pages/Administration/Events/TicketTypes.razor
+++ b/NetEvent/Client/Pages/Administration/Events/TicketTypes.razor
@@ -1,13 +1,16 @@
-﻿<MudCard Class="ma-4">
+﻿@using NetEvent.Client.Extensions;
+<MudCard Class="ma-4">
     <MudCardHeader>
         <CardHeaderContent>
             <MudText Typo="Typo.h6">@Localizer["Administration.Events.Event.Tickets"]</MudText>
         </CardHeaderContent>
     </MudCardHeader>
     <MudCardContent>
+
+        <MudButton Variant="Variant.Outlined" Color="Color.Primary" StartIcon="@Icons.Material.Outlined.Add" Href="@UrlHelper.GetTicketTypesLink(Event.Id ,"new" )">@Localizer["Administration.Events.EventTicketType.Create"]</MudButton>
         @foreach (var ticketType in Event.TicketTypes)
         {
-
+            <div>@ticketType.Name</div>
         }
     </MudCardContent>
 </MudCard>
