--- a/NetEvent/Client/Pages/Checkout/CheckoutTicket.razor
+++ b/NetEvent/Client/Pages/Checkout/CheckoutTicket.razor
@@ -1,15 +1,19 @@
-﻿@page "/checkout/ticket/{ticketType:long}/{amoint:int}"
+﻿@page "/checkout/ticket/{ticketType:long}"
+@page "/checkout/ticket/{ticketType:long}/{amount:int}"
 @using NetEvent.Shared.Dto.Event;
 
-
-@if (CheckoutSession == null)
+@if (EventTicketType == null)
 {
-
+    <NetEventLoading></NetEventLoading>
+}
+else
+{
     <div class="d-flex align-stretch flex-wrap gap-4 ma-4">
 
         <MudCard Class="d-flex flex-grow-1 flex-column" Style="width: 400px; max-width: 600px;">
             <MudCardHeader>
                 <CardHeaderContent>
+                    c
                     <MudText Typo="Typo.h6">@EventTicketType.Name</MudText>
                 </CardHeaderContent>
                 <CardHeaderActions>
@@ -22,12 +26,10 @@
 
             </MudCardContent>
             <MudCardActions>
-                <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="@(async () => await BuyTicketAsync())">@Localizer["Events.Event.Tickets.BuyNow"]</MudButton>
+                <MudButton Variant="Variant.Text" Color="Color.Primary" Disabled="@(CheckoutSession != null)" OnClick="@(async () => await BuyTicketAsync())">@Localizer["Events.Event.Tickets.BuyNow"]</MudButton>
             </MudCardActions>
         </MudCard>
     </div>
 }
-else
-{
-    <div id="payment-container"></div>
-}
+
+<div id="payment-container"></div>
