--- a/NetEvent/Client/Pages/Events/Event.razor
+++ b/NetEvent/Client/Pages/Events/Event.razor
@@ -66,11 +66,10 @@
                                 <MudText Typo="Typo.h6">@ticketType.Name</MudText>
                             </CardHeaderContent>
                             <CardHeaderActions>
-                                <MudText Typo="Typo.h6">@ticketType.Price @ticketType.Currency.ToSymbol()</MudText>
+                                <MudText Typo="Typo.h6">@ticketType.Currency.ToCurrencyValue(ticketType.Price) @ticketType.Currency.ToSymbol()</MudText>
                             </CardHeaderActions>
                         </MudCardHeader>
                         <MudCardContent>
-
                             <MudProgressLinear class="mb-4" Color="Color.Success" Rounded="true" Size="Size.Large" Value="@ticketType.AvailableTickets" Max="@ticketType.AvailableTickets">
                                 <MudText Typo="Typo.subtitle2" Color="Color.Dark">
                                     <b>@Localize["Events.Event.Tickets.Available", "TODO remainingTickets / " + @ticketType.AvailableTickets]</b>
